# debatable

./: README.md  pyproject.toml
debatable/: debate.py
debatable/scripts/: cli.py
