[tool.poetry]
name = "debatable"
version = "0.1.0"
description = ""
authors = ["Haley Smestad <haleyhsmestad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
debate = 'debatable.scripts.cli:cli'
